Fixed SCSS issue where dark mode wouldn't fully apply on screens containing a Grid style component.

--- a/studentrecordssystem.client/src/components/Students/studentsGrid.scss
+++ b/studentrecordssystem.client/src/components/Students/studentsGrid.scss
@@ -1,5 +1,7 @@
-.buildingsGrid {
+.students-grid {
     * {
         color: var(--text-color1);
+        background-color: var(--bg-color);
+        transition: all 0.3s ease-in-out;
     }
 }
